force-app/main/default/objects/Work_Plan__mdt/Work_Plan__mdt.object-meta.xml
<CustomObject>
    <label>Work Plan</label>
    <pluralLabel>Work Plans</pluralLabel>
</CustomObject>