force-app/main/default/objects/Work_Plan__mdt/fields/Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan__c</fullName>
    <label>Work Plan</label>
    <type>TextArea</type>
</CustomField>