force-app/main/default/objects/Work_Plan__mdt/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <type>TextArea</type>
</CustomField>