force-app/main/default/objects/Work_Plan__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Order__c</columns>
    <columns>DeveloperName</columns>
    <columns>Work_Plan__c</columns>
    <columns>Work_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>