force-app/main/default/objects/Work_Plan__mdt/listViews/SIM_Swap.listView-meta.xml
<ListView>
    <fullName>SIM_Swap</fullName>
    <columns>MasterLabel</columns>
    <columns>Order__c</columns>
    <columns>Work_Plan__c</columns>
    <columns>Work_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Type__c</field>
        <operation>contains</operation>
        <value>SIM Swap</value>
    </filters>
    <label>SIM Swap</label>
    <language>en_US</language>
</ListView>